add Configurator class and output each keyboard to a different channel